tests/snapshots/e2e__graph@nonstandard-composite-path.snap
---
source: tests/e2e.rs
expression: out
---
%% generated by ravelact
graph LR
subgraph push
  wf_1__push[".github/workflows/ci.yml<br/>CI"]
  wf_2__push[".github/workflows/docs.yml<br/>Docs"]
  wf_6__push[".github/workflows/release.yml<br/>Release"]
end
subgraph pull_request
  wf_10__pull_request[".github/workflows/typecheck.yml<br/>Typecheck"]
  wf_4__pull_request[".github/workflows/lint.yml<br/>Lint"]
  wf_9__pull_request[".github/workflows/test.yml<br/>Test"]
end
subgraph schedule
  wf_0__schedule[".github/workflows/audit.yml<br/>Audit"]
  wf_5__schedule[".github/workflows/nightly.yml<br/>Nightly"]
  wf_8__schedule[".github/workflows/stale.yml<br/>Stale"]
end
subgraph workflow_dispatch
  wf_7__workflow_dispatch[".github/workflows/smoke.yml<br/>Smoke"]
end
subgraph pull_request_target
  wf_3__pull_request_target[".github/workflows/labeler.yml<br/>Labeler"]
end
act_0[".github/build_cache<br/>Build Cache"]
ext_0["actions/checkout@v4"]
ext_1["actions/labeler@v5"]
ext_2["actions/stale@v9"]
wf_0__schedule --> ext_0
wf_10__pull_request --> ext_0
wf_1__push --> act_0
wf_1__push --> ext_0
wf_2__push --> ext_0
wf_3__pull_request_target --> ext_1
wf_4__pull_request --> ext_0
wf_5__schedule --> act_0
wf_5__schedule --> ext_0
wf_6__push --> act_0
wf_6__push --> ext_0
wf_7__workflow_dispatch --> ext_0
wf_8__schedule --> ext_2
wf_9__pull_request --> act_0
wf_9__pull_request --> ext_0
