tests/snapshots/e2e__graph@orphans-job-env-input.snap
---
source: tests/e2e.rs
expression: out
---
%% generated by ravelact
graph LR
subgraph push
  wf_1__push[".github/workflows/caller.yml<br/>Caller"]
end
wf_0[".github/workflows/callee.yml<br/>Callee"]
wf_1__push --> wf_0
