tests/snapshots/e2e__graph@secrets-explicit-chain.snap
---
source: tests/e2e.rs
expression: out
---
%% generated by ravelact
graph LR
subgraph push
  wf_0__push[".github/workflows/caller.yml<br/>Caller"]
end
wf_1[".github/workflows/leaf.yml<br/>Leaf"]
wf_2[".github/workflows/mid.yml<br/>Mid"]
wf_0__push --> wf_2
wf_2 --> wf_1
