tests/snapshots/e2e__graph@services-postgres.snap
---
source: tests/e2e.rs
expression: out
---
%% generated by ravelact
graph LR
subgraph push
  wf_0__push[".github/workflows/integration.yml<br/>Integration"]
end
subgraph pull_request
  wf_0__pull_request[".github/workflows/integration.yml<br/>Integration"]
end
ext_0["actions/checkout@v4"]
ext_1["actions/setup-node@v4"]
wf_0__pull_request --> ext_0
wf_0__pull_request --> ext_1
wf_0__push --> ext_0
wf_0__push --> ext_1
