tests/snapshots/e2e__graph@step-if-guard.snap
---
source: tests/e2e.rs
expression: out
---
%% generated by ravelact
graph LR
subgraph push
  wf_0__push[".github/workflows/ci.yml<br/>Step-if guard demo"]
end
ext_0["actions/cache@v4"]
ext_1["actions/checkout@v4"]
ext_2["actions/setup-node@v4"]
wf_0__push --> ext_0
wf_0__push --> ext_1
wf_0__push --> ext_2
