tests/snapshots/e2e__graph@workflow-call-chain.snap
---
source: tests/e2e.rs
expression: out
---
%% generated by ravelact
graph LR
subgraph push
  wf_0__push[".github/workflows/caller.yml<br/>Caller"]
end
wf_1[".github/workflows/leaf.yml<br/>Leaf"]
extwf_0["acme/shared/.github/workflows/deploy.yml@v1"]
wf_0__push --> wf_1
wf_1 --> extwf_0
