tests/snapshots/e2e__graph@workflow-dispatch-typed-inputs.snap
---
source: tests/e2e.rs
expression: out
---
%% generated by ravelact
graph LR
subgraph workflow_dispatch
  wf_0__workflow_dispatch[".github/workflows/release.yml<br/>Release"]
end
ext_0["actions/checkout@v4"]
wf_0__workflow_dispatch --> ext_0
