tests/snapshots/e2e__graph@workflow-run-chain.snap
---
source: tests/e2e.rs
expression: out
---
%% generated by ravelact
graph LR
subgraph push
  wf_3__push[".github/workflows/trigger.yml<br/>Trigger"]
end
subgraph workflow_run
  wf_0__workflow_run[".github/workflows/downstream.yml<br/>Downstream"]
  wf_1__workflow_run[".github/workflows/middle.yml<br/>Middle"]
  wf_2__workflow_run[".github/workflows/nightly.yml<br/>Nightly"]
end
wf_1[".github/workflows/middle.yml<br/>Middle"]
wf_2[".github/workflows/nightly.yml<br/>Nightly"]
wf_3[".github/workflows/trigger.yml<br/>Trigger"]
wf_1 -->|workflow_run| wf_2__workflow_run
wf_2 -->|workflow_run| wf_0__workflow_run
wf_3 -->|workflow_run| wf_1__workflow_run
