tests/snapshots/e2e__graph@zizmor-findings.snap
---
source: tests/e2e.rs
expression: out
---
%% generated by ravelact
graph LR
subgraph push
  wf_0__push[".github/workflows/ci.yml<br/>CI"]
end
subgraph pull_request_target
  wf_1__pull_request_target[".github/workflows/pr-target.yml<br/>PR Target"]
end
ext_0["actions/checkout@v4"]
ext_1["deploy-org/deploy-action@v2"]
ext_3["some-org/some-action@v1"]
wf_0__push --> ext_0
wf_0__push --> ext_3
wf_1__pull_request_target --> ext_0
wf_1__pull_request_target --> ext_1
