tests/snapshots/e2e__impact@composite-annotations_step.snap
---
source: tests/e2e.rs
expression: step
---
impact  2 impacted targets  (1 workflows, 1 actions)

WORKFLOWS
  - .github/workflows/entry.yml

ACTIONS
kind       target
composite  .github/actions/notify
