tests/snapshots/e2e__impact@cross-repo-call.snap
---
source: tests/e2e.rs
expression: out
---
impact  2 impacted targets  (2 workflows)

WORKFLOWS
  - .github/workflows/entry-a.yml
  - .github/workflows/entry-b.yml
